--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</div>
 </div>
 <div id="Feature" class="grid_12">
-	<p>Feature</p>
+	<p>Two ways to try this splashpage: </p>
 </div>
 <h2>[Using the CSS 960 without buttons]</h2>
 <div class = "container_12">
@@ -33,8 +33,9 @@
 	Records we want
 	</div>
 </div>
-
-<h3>Using the Table Method with Buttons</h3>
+<br />
+<br />
+<h2>[Using the Table Method with Buttons]</h2>
 <table>
 	<tr>
 		<td><button><br><img src="images/record-black.png" width="120"></br><br><b>RECORDS WE HAVE</b></br></button></td>
