--- a/records-have.html
+++ b/records-have.html
@@ -4,8 +4,9 @@
 
 <head>
 <meta charset="utf-8">
-<title>Welcome to our record app</title>
+<title>Records We Have </title>
 </head>
+	
 <body>
 <h1>Records We Have</h1>
 
